// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DFI address control should match snapshot for Address Control Card 1`] = `null`;

exports[`DFI address control should match snapshot for Address Control Modal 1`] = `
<View
  style={{}}
>
  <View
    style={
      [
        {},
        {},
      ]
    }
  >
    <View
      style={{}}
    >
      <View
        style={{}}
      >
        <Text
          style={
            [
              {},
              [
                {},
                {},
              ],
            ]
          }
        >
          Switch to another address
        </Text>
        <View
          accessible={true}
          collapsable={false}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
          testID="discover_wallet_addresses"
        >
          <Text />
        </View>
      </View>
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
      >
        <Text />
      </View>
    </View>
  </View>
  <RCTScrollView
    contentContainerStyle={{}}
    style={
      [
        undefined,
        {},
      ]
    }
  >
    <View />
  </RCTScrollView>
</View>
`;

exports[`DFI address control should match snapshot for Address Control Screen 1`] = `
<RCTScrollView
  style={
    [
      undefined,
      {},
    ]
  }
>
  <View>
    <Text
      style={
        [
          {},
          [
            {},
            {},
          ],
        ]
      }
      testID="switch_address_screen_title"
      text="Switch to another address"
    >
      Switch to another address
    </Text>
  </View>
</RCTScrollView>
`;

exports[`DFI address control should match snapshot for Address Item Row 1`] = `
<View
  accessibilityState={
    {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
  testID="address_row_0"
>
  <View
    style={{}}
  >
    <View
      style={{}}
    >
      <Text
        ellipsizeMode="middle"
        numberOfLines={1}
        style={
          [
            {},
            [
              {},
              {},
            ],
          ]
        }
        testID="address_row_text_0"
      >
        bcrt1q8rfsfny80jx78cmk4rsa069e2ckp6rn83u6ut9
      </Text>
    </View>
    <View
      style={
        [
          {},
          {},
        ]
      }
      testID="address_active_indicator_bcrt1q8rfsfny80jx78cmk4rsa069e2ckp6rn83u6ut9"
    >
      <Text
        style={
          [
            {},
            [
              {},
              {},
            ],
          ]
        }
      >
        ACTIVE
      </Text>
    </View>
    <View
      style={{}}
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": undefined,
              "fontSize": 24,
            },
            [
              undefined,
              {},
            ],
            {
              "fontFamily": "material",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;
